# SpaceInvaders

./: CMakeLists.txt  readme.md
docs/invaders/: instruction_set.cfg  invaders.dis
source/: constants.h  main.cpp
source/cabinet/: cabinet.cpp  cabinet.h
source/disassembler/: disassembler.cpp  disassembler.h
source/game/: arg_parser.cpp  arg_parser.h  invaders.cpp  invaders.h
source/intel8080/: constants.cpp  cpu.h  flags.cpp  intel_8080.cpp  intel_8080.h  memory.cpp  operation.cpp  operation.h  registers.cpp
source/intel8080/operations/: arithmetic.cpp  arithmetic.h  branching.cpp  branching.h  data_transfer.cpp  data_transfer.h  logical.cpp  logical.h  machine.cpp  machine.h
source/test/: arithmetic_tests.cpp  branching_tests.cpp  cabinet_tests.cpp  data_transfer_tests.cpp  flags_tests.cpp  intel_8080_tests.cpp  logical_tests.cpp  machine_tests.cpp  memory_tests.cpp
